--- a/reduxReact/netlify.toml
+++ b/reduxReact/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   base = "reduxReact"
   publish = "reduxReact/build"
-  command = "npm install --legacy-peer-deps && npm run build"
+  command = "npm run build"
